--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/stack": "^7.6.4",
     "expo": "~54.0.23",
