--- a/package.json
+++ b/package.json
@@ -9,20 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.3",
+    "@apollo/client": "^3.14.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.8.11",
     "@react-navigation/native": "^7.1.20",
     "@react-navigation/stack": "^7.6.4",
     "expo": "~54.0.23",
+    "expo-constants": "~18.0.12",
+    "expo-device": "~8.0.10",
+    "expo-notifications": "~0.32.15",
     "expo-status-bar": "~3.0.8",
+    "graphql": "^16.12.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-webview": "13.15.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
+    "@types/expo__vector-icons": "^9.0.1",
     "@types/react": "~19.1.0",
     "typescript": "~5.9.2"
   },
